@@ -1,0 +1,70 @@
+%!! DVIpos, version (20070107), output file
+% This_position_filename: "play.pos"
+% Command_line_to_dvipos:
+%+ <THE_COMMAND_LINE>
+%+ <THE_COMMAND_LINE CONTINUED>
+% Processing_data_and_time: Sun Feb  7 09:34:56 2021
+% Input_filename: "play.dvi"
+% DVI_standard: 2
+% DVI_mag: 1000
+% DVI_mag_requested: 1000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 1 & "50.75C3 & "37.0000 "39.BFAC "683.0000 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 2 & "50.75C3 & "37.0000 "39.BFAC "683.0000 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 3 & "50.75C3 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 4 & "50.75C3 & "37.0000 "39.BFAC "683.0000 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 5 & "50.FD70 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 6 & "50.75C3 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 7 & "50.75C3 & "37.0000 "39.BFAC "683.28F6 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 8 & "50.75C3 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 9 & "50.75C3 & "37.0000 "39.BFAC "683.68F6 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 10 & "50.75C3 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 11 & "50.75C3 & "37.0000 "39.BFAC "683.0000 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 12 & "50.75C3 & "37.0000 "39.BFAC "683.0000 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 13 & "50.75C3 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 14 & "50.75C3 & "37.0000 "39.BFAC "683.0000 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 15 & "50.FD70 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 16 & "50.75C3 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 17 & "50.75C3 & "37.0000 "39.BFAC "683.28F6 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 18 & "50.75C3 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 19 & "50.75C3 & "37.0000 "39.BFAC "683.68F6 "401.1945 & "683.0000
+
+## KEY & PAGENO & ENTRY-V & TOP-V LEFT-H BOTTOM-V RIGHT-H & EXIT-V
+pagebb & 20 & "50.75C3 & "37.0000 "39.BFAC "683.3FFF "401.1945 & "683.0000
